--- a/chuck_jokes/package.json
+++ b/chuck_jokes/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.10",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
