--- a/server/client/package.json
+++ b/server/client/package.json
@@ -21,5 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "unexpected": "^10.39.0"
   }
 }
