--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,10 @@
     "yarn": "1.9.4"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
+    "start": "nodemon index.js",
     "client": "yarn --cwd client start",
     "dev": "yarn server & yarn client",
+    "app-install" : "yarn install && cd client && yarn install",
     "heroku-postbuild": "YARN_PRODUCTION=false cd client && yarn && yarn run build"
   },
   "license": "MIT",
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "graphql-yoga": "^1.16.2",
     "mongoose": "^5.2.14",
     "mongoose-paginate": "^5.0.3",
     "node-cron": "^2.0.1"
