--- a/server/client/package.json
+++ b/server/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.16",
     "axios": "^0.18.0",
+    "graphql-tag": "^2.9.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
