--- a/server/client/package.json
+++ b/server/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
