--- a/vue-jokes/package.json
+++ b/vue-jokes/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "prettier": "^1.18.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
       "eslint:recommended"
     ],
     "rules": {
-        "no-console": "off"
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
