--- a/jokes-app/package.json
+++ b/jokes-app/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "prettier": "^1.18.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -16,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "husky": "^3.0.9",
+    "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0"
   },
   "husky": {
