--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "backpack-core": "^0.8.4",
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
