--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "start": "node ./build/main.js",
     "dev": "backpack dev",
     "build": "backpack build",
-    "postinstall": "backpack build"
+    "postinstall": "backpack build",
+    "prettier": "prettier --write \"./src/**/*.js\""
   },
   "license": "MIT",
   "dependencies": {
