--- a/vue-jokes/package.json
+++ b/vue-jokes/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "backpack-core": "^0.8.4",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
+    "portal-vue": "^2.1.6",
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
   },
