--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "backpack-core": "^0.8.4",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.2",
     "mongodb": "^3.3.3"
