--- a/vue-jokes/package.json
+++ b/vue-jokes/package.json
@@ -15,11 +15,13 @@
     "core-js": "^2.6.5",
     "portal-vue": "^2.1.6",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-router": "^4.0.5",
     "@vue/cli-service": "^3.12.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.1",
