--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,16 @@
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.1.2",
     "cors": "^2.8.5",
     "express": "^4.16.2",
-    "mongodb": "^3.3.3"
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.4",
+    "mongoose": "^5.7.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "prettier": "1.18.2"
